# EdgeDetectionApp

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: CameraManager.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt  build.gradle
app/src/main/cpp/: native-labs.cpp
app/src/main/java/com/example/edgedetection/: MainActivity.java
app/src/main/res/Values/: strings.xml  styles.xml
app/src/main/res/layout/: activity_main.xml
web/: build.js  package-lock.json  package.json
web/src/: index.html  index.js
